--- a/app/src/main/res/layout/fragment_salehub_home.xml
+++ b/app/src/main/res/layout/fragment_salehub_home.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:backgroundTint="@color/white"
+    android:layout_height="match_parent"
     android:background="@color/white"
-    android:layout_height="match_parent">
+    android:backgroundTint="@color/white">
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/rv_picker"
+        android:layout_width="50dp"
+        android:layout_height="120dp"
         android:foreground="@drawable/foreground_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        app:layout_constraintEnd_toStartOf="@id/np_picker"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <com.example.salehub.CustomNumberPicker
+        android:id="@+id/np_picker"
+        android:layout_width="50dp"
+        android:layout_height="120dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/rv_picker"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
